fix overlapping add contact overlay

--- a/contacts/add-contact-overlay.css
+++ b/contacts/add-contact-overlay.css
@@ -12,6 +12,7 @@
   position: absolute;
   align-items: center;
   top: 0;
+  z-index: 999;
 }
 
 #add-contact-overlay {
